# A-encik

./: .readthedocs.yaml  AGENTS.md  README.md  diag_aldoni.py  mkdocs.yml  pyproject.toml  reproduce_bug.py
docs/en/: enc-format.md
docs/eo/: enc-formato.md
docs/fr/: format-enc.md
src/A/utils/: serialize.py
src/A_encik/: __init__.py  _cli_aldoni.py  _cli_crud.py  _cli_rubujo.py  _cli_search.py  _cli_semantika.py  _cli_semantika_grupo.py  _cli_special.py  _display_entry.py  _display_graph.py  _display_html.py  _display_panel.py  _graph.py  _links.py  _reconcile_mixin.py  _search_mixin.py  _search_service.py  _time_entry.py  cli.py  display.py  display_helpers.py  enc_format.py  service.py
src/A_encik/data/: _cache_api.py  _cache_db.py  _cache_lookup.py  _cache_maintenance.py  _cache_negative.py  _cache_store.py  migrate_from_autish.py  migration_register.py  semantika_cache.py  storage.py
src/A_encik/enc_format/: __init__.py  _compat.py  _parser.py  _serializer.py
src/A_encik/semantika/: __init__.py  config.py  search.py  wikidata.py
tests/: __init__.py  conftest.py  test_cli.py  test_enc_compat.py  test_enc_parser.py  test_enc_serializer.py  test_service.py  test_storage.py
