[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "A-encik"
version = "0.1.0"
description = "A — personal knowledge management microapp"
authors = [{name = "Ron"}]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "A-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[project.entry-points."A.commands"]
encik = "A_encik.cli:app"

[project.entry-points."A.migrations"]
A-encik = "A_encik.data.migration_register:register"

[project.entry-points."A.backup"]
encik = "A_encik.data.storage:get_backup_targets"

[tool.hatch.build.targets.wheel]
packages = ["src/A_encik"]

[tool.poetry]
name = "A-encik"
version = "0.1.0"
description = "A — personal knowledge management microapp"
authors = ["Ron"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.11"
A-core = { path = "../A-core" }
typer = {version = ">=0.12.0", extras = ["rich"]}
rich = ">=13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
a-core = { path = "../A-core", editable = true }

[dependency-groups]
dev = [
    "a-core",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "typer>=0.25.1",
]
